src/libs/SDL_webui/src/flex.h

struct flex_item;
// Free memory associated with a flex item and its children.
// This function can only be called on a root item.
DLLEXPORT void flex_item_free(struct flex_item *item);