src/rwebview/rwebview_ui.nim


const
  MU_OPT_ALIGNCENTER* = 1 shl 0
  MU_OPT_ALIGNRIGHT*  = 1 shl 1
  MU_OPT_NOINTERACT*  = 1 shl 2
  MU_OPT_NOFRAME*     = 1 shl 3
  MU_OPT_NORESIZE*    = 1 shl 4
  MU_OPT_NOSCROLL*    = 1 shl 5
  MU_OPT_NOCLOSE*     = 1 shl 6
  MU_OPT_NOTITLE*     = 1 shl 7
  MU_OPT_HOLDFOCUS*   = 1 shl 8
  MU_OPT_EXPANDED*    = 1 shl 12

  MU_RES_ACTIVE*  = 1 shl 0
  MU_RES_SUBMIT*  = 1 shl 1
  MU_RES_CHANGE*  = 1 shl 2

  MU_COMMAND_JUMP* = 1
  MU_COMMAND_CLIP* = 2
  MU_COMMAND_RECT* = 3
  MU_COMMAND_TEXT* = 4
  MU_COMMAND_ICON* = 5
  MU_COMMAND_FONT* = 6

  MU_COLOR_TEXT*   = 0
  MU_COLOR_BORDER* = 1

  MU_MOUSE_LEFT*   = 1 shl 0
  MU_MOUSE_RIGHT*  = 1 shl 1
  MU_MOUSE_MIDDLE* = 1 shl 2

  MU_KEY_SHIFT*     = 1 shl 0
  MU_KEY_CTRL*      = 1 shl 1
  MU_KEY_ALT*       = 1 shl 2
  MU_KEY_BACKSPACE* = 1 shl 3
  MU_KEY_RETURN*    = 1 shl 4
  MU_KEY_LEFT*      = 1 shl 5
  MU_KEY_RIGHT*     = 1 shl 6
  MU_KEY_HOME*      = 1 shl 7
  MU_KEY_END*       = 1 shl 8
  MU_KEY_DELETE*    = 1 shl 9

proc mu_vec2(x, y: cint): MuVec2 {.importc: "mu_vec2".}
proc mu_rect(x, y, w, h: cint): MuRect {.importc: "mu_rect".}
proc mu_color(r, g, b, a: cint): MuColor {.importc: "mu_color".}

proc mu_init(ctx: ptr MuContext) {.importc: "mu_init".}
proc mu_begin(ctx: ptr MuContext) {.importc: "mu_begin".}
proc mu_end(ctx: ptr MuContext) {.importc: "mu_end".}

proc mu_input_mousemove(ctx: ptr MuContext; x, y: cint)
    {.importc: "mu_input_mousemove".}
proc mu_input_mousedown(ctx: ptr MuContext; x, y, btn: cint)
    {.importc: "mu_input_mousedown".}
proc mu_input_mouseup(ctx: ptr MuContext; x, y, btn: cint)
    {.importc: "mu_input_mouseup".}
proc mu_input_scroll(ctx: ptr MuContext; x, y: cint)
    {.importc: "mu_input_scroll".}
proc mu_input_keydown(ctx: ptr MuContext; key: cint)
    {.importc: "mu_input_keydown".}
proc mu_input_keyup(ctx: ptr MuContext; key: cint)
    {.importc: "mu_input_keyup".}
proc mu_input_text(ctx: ptr MuContext; text: cstring)
    {.importc: "mu_input_text".}

proc mu_next_command(ctx: ptr MuContext; cmd: ptr ptr MuCommand): cint
    {.importc: "mu_next_command".}
proc mu_set_clip(ctx: ptr MuContext; rect: MuRect) {.importc: "mu_set_clip".}
proc mu_draw_rect(ctx: ptr MuContext; rect: MuRect; color: MuColor)
    {.importc: "mu_draw_rect".}
proc mu_draw_text(ctx: ptr MuContext; font: MuFont; str: cstring; len: cint;
                  pos: MuVec2; color: MuColor) {.importc: "mu_draw_text".}
proc mu_draw_control_text(ctx: ptr MuContext; str: cstring; rect: MuRect;
                          colorid: cint; opt: cint)
    {.importc: "mu_draw_control_text".}

proc mu_layout_row(ctx: ptr MuContext; items: cint; widths: ptr cint;
                   height: cint) {.importc: "mu_layout_row".}
proc mu_layout_set_next(ctx: ptr MuContext; r: MuRect; relative: cint)
    {.importc: "mu_layout_set_next".}
proc mu_layout_next(ctx: ptr MuContext): MuRect {.importc: "mu_layout_next".}

proc mu_label(ctx: ptr MuContext; text: cstring) {.importc: "mu_label".}
proc mu_button_ex(ctx: ptr MuContext; label: cstring; icon: cint;
                  opt: cint): cint {.importc: "mu_button_ex".}
proc mu_checkbox(ctx: ptr MuContext; label: cstring; state: ptr cint): cint
    {.importc: "mu_checkbox".}
proc mu_textbox_ex(ctx: ptr MuContext; buf: cstring; bufsz: cint;
                   opt: cint): cint {.importc: "mu_textbox_ex".}
proc mu_slider_ex(ctx: ptr MuContext; value: ptr cfloat;
                  low, high, step: cfloat; fmt: cstring;
                  opt: cint): cint {.importc: "mu_slider_ex".}
proc mu_header_ex(ctx: ptr MuContext; label: cstring; opt: cint): cint
    {.importc: "mu_header_ex".}
proc mu_begin_window_ex(ctx: ptr MuContext; title: cstring; rect: MuRect;
                        opt: cint): cint {.importc: "mu_begin_window_ex".}
proc mu_end_window(ctx: ptr MuContext) {.importc: "mu_end_window".}
proc mu_begin_panel_ex(ctx: ptr MuContext; name: cstring; opt: cint)
    {.importc: "mu_begin_panel_ex".}
proc mu_end_panel(ctx: ptr MuContext) {.importc: "mu_end_panel".}
proc mu_push_font(ctx: ptr MuContext; fontId: cint)
    {.importc: "mu_push_font".}

# C helpers for setting mu_Context callbacks (avoids replicating full struct in Nim)
proc rw_mu_set_text_width(ctx: ptr MuContext;
    fn: proc(font: MuFont; str: cstring; len: cint): cint {.cdecl.})
    {.importc: "rw_mu_set_text_width".}
proc rw_mu_set_text_height(ctx: ptr MuContext;
    fn: proc(font: MuFont): cint {.cdecl.})
    {.importc: "rw_mu_set_text_height".}

# =============================================================================
# UI Data Model
# =============================================================================

type
  RwUiNodeKind* = enum
    rukRoot, rukDiv, rukSpan, rukText, rukLabel,
    rukButton, rukInputText, rukCheckbox, rukRange,
    rukHr, rukCanvas, rukSelect, rukH1, rukH2, rukH3,
    rukH4, rukH5, rukH6, rukP, rukImg, rukA, rukUnknown

  RwUiDisplay* = enum
    rudFlex, rudNone

  RwUiTextAlign* = enum
    rutaLeft, rutaCenter, rutaRight

  RwUiOverflow* = enum
    ruoVisible, ruoHidden, ruoAuto, ruoScroll

  RwUiStyle* = object
    # Box model
    widthPx*:   cfloat
    heightPx*:  cfloat
    marginTopPx*, marginRightPx*, marginBottomPx*, marginLeftPx*: cfloat
    paddingTopPx*, paddingRightPx*, paddingBottomPx*, paddingLeftPx*: cfloat
    # Flexbox
    flexGrow*:   cfloat
    flexShrink*: cfloat
    flexBasisPx*: cfloat
    flexDirection*: FlexDirection
    flexWrap*: FlexWrap
    justifyContent*: FlexAlign
    alignItems*: FlexAlign
    alignSelf*: FlexAlign
    alignContent*: FlexAlign
    order*: cint
    # Position
    position*: FlexPosition
    topPx*, rightPx*, bottomPx*, leftPx*: cfloat
    # Visual
    textColor*:   tuple[r, g, b, a: uint8]
    bgColor*:     tuple[r, g, b, a: uint8]
    borderColor*: tuple[r, g, b, a: uint8]
    borderWidthPx*: cfloat
    borderRadiusPx*: cfloat
    opacity*: cfloat
    # Typography
    fontSize*:       cfloat
    fontWeight*:     cint  # 400=normal, 700=bold
    fontStyleItalic*: bool
    textDecoration*: cint  # 0=none, 1=underline, 2=line-through
    letterSpacing*:  cfloat
    lineHeight*:     cfloat
    fontFamily*:     string
    # Behavior
    display*:   RwUiDisplay
    textAlign*: RwUiTextAlign
    overflow*:  RwUiOverflow

  RwUiNode* = ref object
    id*:       string
    kind*:     RwUiNodeKind
    text*:     string
    classes*:  seq[string]
    style*:    RwUiStyle
    children*: seq[RwUiNode]
    # Internal layout link
    flexItem*: ptr FlexItem

  RwUiTree* = ref object
    root*: RwUiNode

  RwUiPersistentState* = ref object
    inputText*:  Table[string, string]
    checkbox*:   Table[string, cint]
    rangeVal*:   Table[string, cfloat]

  RwUiResult* = object
    clickedIds*: seq[string]
    changedIds*: seq[string]
    submitIds*:  seq[string]

# =============================================================================
# Global UI State
# =============================================================================

var
  gNvg*:        ptr NVGcontext = nil
  gMuCtx*:      MuContext
  gUiTree*:     RwUiTree = nil
  gUiState*:    RwUiPersistentState = nil
  gUiFlexRoot*: ptr FlexItem = nil
  gUiInited*:   bool = false
  gUiDefaultFontId*: cint = -1

# =============================================================================
# Style Defaults
# =============================================================================

proc defaultStyle(): RwUiStyle =
  result.widthPx  = NaN
  result.heightPx = NaN
  result.flexGrow   = 0.0
  result.flexShrink = 1.0
  result.flexBasisPx = NaN
  result.flexDirection = fdColumn
  result.flexWrap = fwNoWrap
  result.justifyContent = faStart
  result.alignItems = faStretch
  result.alignSelf = faAuto
  result.alignContent = faStretch
  result.order = 0
  result.position = fpRelative
  result.topPx    = NaN
  result.rightPx  = NaN
  result.bottomPx = NaN
  result.leftPx   = NaN
  result.textColor   = (220'u8, 220'u8, 220'u8, 255'u8)
  result.bgColor     = (0'u8, 0'u8, 0'u8, 0'u8)
  result.borderColor = (80'u8, 80'u8, 80'u8, 255'u8)
  result.borderWidthPx = 0.0
  result.borderRadiusPx = 0.0
  result.opacity = 1.0
  result.fontSize = 14.0
  result.fontWeight = 400
  result.fontStyleItalic = false
  result.textDecoration = 0
  result.letterSpacing = 0.0
  result.lineHeight = 1.2
  result.fontFamily = ""
  result.display   = rudFlex
  result.textAlign = rutaLeft
  result.overflow  = ruoVisible

# =============================================================================
# microui text width/height callbacks (required by mu_init)
# =============================================================================

proc muTextWidth(font: MuFont; str: cstring; len: cint): cint {.cdecl.} =
  if gNvg == nil: return 0
  nvgFontSize(gNvg, 14.0)
  if gUiDefaultFontId >= 0:
    nvgFontFaceId(gNvg, gUiDefaultFontId)
  var bounds: array[4, cfloat]
  let txt = if len > 0: $str  # use full string if len matches
            else: ""
  if txt.len == 0: return 0
  discard nvgTextBounds(gNvg, 0, 0, cstring(txt), nil, addr bounds[0])
  result = cint(bounds[2] - bounds[0])

proc muTextHeight(font: MuFont): cint {.cdecl.} =
  if gNvg == nil: return 16
  nvgFontSize(gNvg, 14.0)
  if gUiDefaultFontId >= 0:
    nvgFontFaceId(gNvg, gUiDefaultFontId)
  var asc, desc, lineh: cfloat
  nvgTextMetrics(gNvg, addr asc, addr desc, addr lineh)
  result = cint(lineh)

# =============================================================================
# Init / Shutdown
# =============================================================================

proc rwUiInit*() =
  ## Initialize the native UI subsystem.
  ## Must be called after the GL context is current.
  if gUiInited: return

  # Load GL3 function pointers for NanoVG backend
  if rw_nvg_gl3_init(cast[RwGLGetProcAddr](SDL_GL_GetProcAddress)) == 0:
    stderr.writeLine("[rwebview_ui] ERROR: GL3 function loading failed")
    return

  # Create NanoVG context
  gNvg = nvgCreateGL3(cint(NVG_ANTIALIAS or NVG_STENCIL_STROKES))
  if gNvg == nil:
    stderr.writeLine("[rwebview_ui] ERROR: nvgCreateGL3 failed")
    return

  # Initialize microui
  mu_init(addr gMuCtx)
  rw_mu_set_text_width(addr gMuCtx, muTextWidth)
  rw_mu_set_text_height(addr gMuCtx, muTextHeight)

  # Initialize persistent state
  gUiState = RwUiPersistentState(
    inputText: initTable[string, string](),
    checkbox:  initTable[string, cint](),
    rangeVal:  initTable[string, cfloat]()
  )

  gUiInited = true
  stderr.writeLine("[rwebview_ui] Native UI subsystem initialized (NanoVG + flex + microui)")

proc rwUiShutdown*() =
  ## Clean up the native UI subsystem.
  if gUiFlexRoot != nil:
    flex_item_free(gUiFlexRoot)
    gUiFlexRoot = nil
  if gNvg != nil:
    nvgDeleteGL3(gNvg)
    gNvg = nil
  gUiInited = false

# =============================================================================
# HTML Tag → RwUiNodeKind mapping
# =============================================================================

proc tagToNodeKind(tag: string): RwUiNodeKind =
  case tag.toLowerAscii()
  of "div":      rukDiv
  of "span":     rukSpan
  of "p":        rukP
  of "h1":       rukH1
  of "h2":       rukH2
  of "h3":       rukH3
  of "h4":       rukH4
  of "h5":       rukH5
  of "h6":       rukH6
  of "label":    rukLabel
  of "button":   rukButton
  of "input":    rukInputText
  of "select":   rukSelect
  of "textarea": rukInputText
  of "canvas":   rukCanvas
  of "hr":       rukHr
  of "img":      rukImg
  of "a":        rukA
  of "form":     rukDiv   # treat form as div container
  else:          rukUnknown

# =============================================================================
# =============================================================================
# Inline CSS style parser (subset)
# =============================================================================
